# Retail-Data-Platform

./: .env_example  .gitignore  main.py  pyproject.toml
terraform/: variables.tf
